--- a/package.json
+++ b/package.json
@@ -4,13 +4,12 @@
   "description": "React/Next.js based starter kit, focused on delivering a rich Search & Discovery e-commerce experience.",
   "private": true,
   "scripts": {
+    "postinstall": "patch-package",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "analyze": "ANALYZE=true next build",
-    "cli": "cd cli && npm start",
-    "postinstall": "cd cli && npm install"
+    "analyze": "ANALYZE=true next build"
   },
   "dependencies": {
     "@algolia/autocomplete-js": "^1.5.1",
@@ -21,6 +20,10 @@
     "@algolia/react-instantsearch-widget-color-refinement-list": "^1.4.5",
     "@algolia/react-instantsearch-widget-loadmore-with-progressbar": "^1.3.8",
     "@algolia/react-instantsearch-widget-size-refinement-list": "^1.0.2",
+    "@algolia/recommend": "^4.11.0",
+    "@algolia/recommend-react": "^1.3.1",
+    "@algolia/ui-components-horizontal-slider-react": "^1.0.0",
+    "@algolia/ui-components-horizontal-slider-theme": "^1.0.0",
     "@artsy/fresnel": "^3.0.2",
     "@material-design-icons/svg": "^0.10.8",
     "algoliasearch": "^4.11.0",
@@ -67,6 +70,7 @@
     "ifdef-loader": "^2.3.2",
     "next-compose-plugins": "^2.2.1",
     "next-pwa": "^5.5.0",
+    "patch-package": "^6.2.2",
     "postcss": "^8.4.12",
     "postcss-easy-import": "^3.0.0",
     "prettier": "^2.4.1",
